tests/semantic_errors/testcase03.c
// comparing different types

int main(void){
    if(3 > 'a'){
    } else {
    }

    return 0;
}